Don't block GPU process access in single-process mode.

BUG=664488
TEST=content_unittests,gpu is enabled in win/NVidia
R=kbr@chromium.org,kkinnunen@nvidia.com

Review-Url: https://codereview.chromium.org/2569413002
Cr-Commit-Position: refs/heads/master@{#438612}

Former-commit-id: 66731ee5c810af897ee9029a2054aca682091d30